# doc_word_counter

./: .gitignore  README.md  ipynb_word_counter.py  pyproject.toml  wordcounter.py
.github/workflows/: build.yml  qa.yml
test/: mock_run.py  tests.py
test/data/: test_file.ipynb  test_file.md
